#210 keyboard support, #190 jetty plugin first pass working