@@ -1,15 +1,21 @@
 package com.thecoderscorner.menu.editorui.generator.core;
 
+import com.thecoderscorner.menu.editorui.generator.OnlineLibraryVersionDetector;
 import com.thecoderscorner.menu.editorui.generator.parameters.CodeParameter;
 import com.thecoderscorner.menu.editorui.generator.plugin.CodePluginItem;
 import com.thecoderscorner.menu.editorui.generator.plugin.RequiredSourceFile;
+import com.thecoderscorner.menu.editorui.generator.plugin.RequiredZipFile;
 import com.thecoderscorner.menu.editorui.util.StringHelper;
 
+import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Comparator;
 import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.stream.Collectors;
@@ -27,7 +33,7 @@ public class PluginRequiredFileProcessor {
         this.uiLogger = uiLogger;
     }
 
-    public void dealWithRequiredPlugins(List<CodePluginItem> generators, Path directory, List<String> previousPluginFiles) throws TcMenuConversionException {
+    public void dealWithRequiredPlugins(List<CodePluginItem> generators, Path directory, Path projectHome, List<String> previousPluginFiles) throws TcMenuConversionException {
         uiLogger.accept(INFO, "Checking if any plugin files need removal because of plugin changes");
 
         var newPluginFileSet = generators.stream()
@@ -54,25 +60,24 @@ public class PluginRequiredFileProcessor {
         uiLogger.accept(INFO, "Adding all files required by selected plugins");
 
         for (var gen : generators) {
-            generatePluginsForCreator(gen, directory);
+            generatePluginsForCreator(gen, directory, projectHome);
         }
     }
 
-    protected void generatePluginsForCreator(CodePluginItem item, Path directory) throws TcMenuConversionException {
+    protected void generatePluginsForCreator(CodePluginItem item, Path directory, Path projectHome) throws TcMenuConversionException {
         var expando = new CodeParameter(CodeParameter.NO_TYPE, null, true, "");
         var filteredSourceFiles = item.getRequiredSourceFiles().stream()
-                .filter(sf-> sf.getApplicability().isApplicable(context.getProperties()))
-                .collect(Collectors.toList());
+                .filter(sf -> sf.getApplicability().isApplicable(context.getProperties())).toList();
 
         for (var srcFile : filteredSourceFiles) {
             try {
                 var fileName = expando.expandExpression(context, srcFile.getFileName());
                 // get the source (either from the plugin or from the tcMenu library)
                 String fileNamePart;
-                String fileData;
+                byte[] fileDataBytes;
                 Path location = item.getConfig().getPath().resolve(fileName);
                 try (var sourceInputStream = new FileInputStream(location.toFile())) {
-                    fileData = new String(sourceInputStream.readAllBytes());
+                    fileDataBytes = sourceInputStream.readAllBytes();
                     fileNamePart = Paths.get(fileName).getFileName().toString();
                 } catch (Exception e) {
                     throw new TcMenuConversionException("Unable to locate file in plugin: " + srcFile, e);
@@ -82,14 +87,32 @@ public class PluginRequiredFileProcessor {
 
                 if(!srcFile.isOverwritable() && Files.exists(resolvedOutputFile)) {
                     uiLogger.accept(WARNING, "Source file " + srcFile.getFileName() + " already exists and overwrite is false, skipping");
-                }
-                else {
+                } else if(srcFile instanceof RequiredZipFile zipFile) {
+                    try(var stream = new ByteArrayInputStream(fileDataBytes)) {
+                        var destDir = projectHome.resolve(expando.expandExpression(context, zipFile.getDest()));
+                        if(zipFile.isCleanFirst() && Files.exists(destDir)) {
+                            uiLogger.accept(INFO, "Clean zip dest directory " + destDir + " for " + zipFile.getFileName());
+                            var processFailed = Files.walk(destDir)
+                                    .sorted(Comparator.reverseOrder())
+                                    .map(Path::toFile)
+                                    .map(File::delete)
+                                    .anyMatch(retVal -> !retVal);
+                            if(processFailed) {
+                                uiLogger.accept(ERROR, "Failed to clean the zip dest directory " + destDir + " for " + zipFile.getFileName());
+                            }
+                        }
+                        Files.createDirectories(destDir);
+                        uiLogger.accept(INFO, "Extract zip into dest directory " + destDir + " for " + zipFile.getFileName());
+                        OnlineLibraryVersionDetector.extractFilesFromZip(destDir, stream);
+                    }
+                } else {
                     uiLogger.accept(INFO, "Copy plugin file: " + srcFile.getFileName());
+                    String fileData = "";
                     for (var cr : srcFile.getReplacementList()) {
                         if (cr.getApplicability().isApplicable(context.getProperties())) {
                             uiLogger.accept(DEBUG, "Plugin file replacement: " + cr.getFind() + " to " + cr.getReplace());
                             var replacement = StringHelper.escapeRex(expando.expandExpression(context, cr.getReplace()));
-                            fileData = fileData.replaceAll(cr.getFind(), replacement);
+                            fileData = new String(fileDataBytes, StandardCharsets.UTF_8).replaceAll(cr.getFind(), replacement);
                         }
                     }
 
